--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.projectKey>joaco8704_mvn</sonar.projectKey>
-		<sonar.organization>joaco8704</sonar.organization>
+		<sonar.projectKey>Rodrigrimi_mvn</sonar.projectKey>
+		<sonar.organization>Rodrigrimi</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
